[package]
name = "rustventually"
version = "0.1.0"
authors = ["Allie Signet <allie@cat-girl.gay>"]
edition = "2018"

[dependencies]
actix-web = "3"
tokio-postgres = {version = "0.5.1", features = ["with-uuid-0_8", "with-serde_json-1"]}
deadpool-postgres = "0.5.0"
uuid = {version = "0.8", features = ["v4"]}
serde_json = "1"
serde_yaml = "0.8.17"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
chrono = "0.4"
